Incorporating code review feedback
api.py:
- Clamped max game size to 500 matches
- Refactored make_move logic into Game class
- Updated cancel_game from POST to PUT

cron.yaml:
- Assigned scheduling settings for real-world usage instead of debug

LICENSE:
- Added a MIT license

main.py:
- Removed unused module

models.py:
- Assigned default game size (4 matches) if unspecified
- Refactored make_move game logic into Game class

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,8 +1,8 @@
 cron:
 - description: Send a challenge email to users with below average scores
   url: /crons/send_challenge
-  schedule: every 1 minutes
+  schedule: every 1 days
 
 - description: Calculate the average score across all players
   url: /crons/cache_average_score
-  schedule: every 1 minutes
+  schedule: every 2 hours
